--- a/style.css
+++ b/style.css
@@ -58,11 +58,16 @@ table {
 /*  GLOBAL STYLES*/
 body {
     display: grid;
+    grid-template-columns: 1fr;
 }
 
 /* MEDIA QUERY (medium) */
+@media screen and (min-width:941px){
 body {
-    
+    grid-template-columns: 1fr 1fr;
+
+}
+
 }
 
 
