--- a/style.css
+++ b/style.css
@@ -56,6 +56,14 @@ table {
     --crust: #C27D45;
 }
 /*  GLOBAL STYLES*/
+h1 {
+    font-weight: bold;
+}
+
+h2 {
+    font-weight: bold;
+}
+
 body {
     display: grid;
     grid-template-columns: 1fr;
@@ -65,11 +73,55 @@ body {
 @media screen and (min-width:941px){
 body {
     grid-template-columns: 1fr 1fr;
-
 }
 
+header {
+    grid-column: 1/3;
+}
+
+nav{
+    grid-column: 1/3;
+}
+
+main {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-column: 1/3;
+}
+
+footer {
+    grid-column: 1/2;
+}
 }
 
 
 /* MEDIA QUERY (large) */
+@media screen and (min-width:1024px){
+body {
+    grid-template-columns: 1fr 1fr 1fr; 
+}
+
+header {
+    grid-column: 1/4;
+}
+main {
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-column: 1/4;
+}
+
+footer{
+    grid-column: 1/3;
+}
+
 /* MEDIA QUERY (xl) */
+@media screen and (min-width:1100px){
+body {
+    grid-template-columns: 1fr 1fr 1fr; 
+}
+
+main {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-column: 1/4;
+}
+}
+}
